// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Games component renders the Games component with the list of games 1`] = `
<div
  className="games"
>
  <h1
    className="games__title"
  >
    Test title
  </h1>
  <ul
    className="games__list"
  >
    <li
      className="game"
    >
      <a
        className="game__link game__not-available"
        href="https://www.amazon.com/Red-Dead-Redemption-2-PlayStation-4/dp/B01M5DZ525/ref=sr_1_3?keywords=ps4+games&qid=1551459125&s=gateway&sr=8-3"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="game__not-available-disclaimer"
        >
          not available
        </span>
        <img
          alt="Red Dead Redemption 2"
          className="game__img"
          src="https://m.media-amazon.com/images/I/81z80lFufgL._AC_UL872_FMwebp_QL65_.jpg"
        />
        <h3
          className="game__img_title"
        >
          Red Dead Redemption 2
        </h3>
      </a>
    </li>
    <li
      className="game"
    >
      <a
        className="game__link game__not-available"
        href="https://www.amazon.com/Marvels-Spider-Man-PlayStation-4/dp/B01GW8YDLK/ref=sr_1_4?keywords=ps4+games&qid=1551459125&s=gateway&sr=8-4"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="game__not-available-disclaimer"
        >
          not available
        </span>
        <img
          alt="Marvels Spiderman"
          className="game__img"
          src="https://m.media-amazon.com/images/I/81d6JU6g1pL._AC_UL872_FMwebp_QL65_.jpg"
        />
        <h3
          className="game__img_title"
        >
          Marvels Spiderman
        </h3>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Games component renders the Games component with the list of games, some of them featured and some of them not available 1`] = `
<div
  className="games"
>
  <h1
    className="games__title"
  >
    Test title
  </h1>
  <ul
    className="games__list"
  >
    <li
      className="game"
    >
      <a
        className="game__link game__featured game__not-available"
        href="https://www.amazon.com/Red-Dead-Redemption-2-PlayStation-4/dp/B01M5DZ525/ref=sr_1_3?keywords=ps4+games&qid=1551459125&s=gateway&sr=8-3"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          className="game__not-available-disclaimer"
        >
          not available
        </span>
        <img
          alt="Red Dead Redemption 2"
          className="game__img"
          src="https://m.media-amazon.com/images/I/81z80lFufgL._AC_UL872_FMwebp_QL65_.jpg"
        />
        <h3
          className="game__img_title"
        >
          Red Dead Redemption 2
        </h3>
      </a>
    </li>
    <li
      className="game"
    >
      <a
        className="game__link"
        href="https://www.amazon.com/Marvels-Spider-Man-PlayStation-4/dp/B01GW8YDLK/ref=sr_1_4?keywords=ps4+games&qid=1551459125&s=gateway&sr=8-4"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="Marvels Spiderman"
          className="game__img"
          src="https://m.media-amazon.com/images/I/81d6JU6g1pL._AC_UL872_FMwebp_QL65_.jpg"
        />
        <h3
          className="game__img_title"
        >
          Marvels Spiderman
        </h3>
      </a>
    </li>
  </ul>
</div>
`;
